fix align

--- a/source/sass/blocks/front-header.scss
+++ b/source/sass/blocks/front-header.scss
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   margin: 0;
   margin-top: 40px;
   margin-bottom: 90px;
